--- a/MangoWork/Mango.web/appsettings.json
+++ b/MangoWork/Mango.web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "CouponApi": "http://localhost:7001"
+  }
 }
