--- a/MangoWork/Mango.services.AuthApi/appsettings.json
+++ b/MangoWork/Mango.services.AuthApi/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-SSCVMDU\\MSSQLSERVER_2;Database=MangoAuth;User Id=sa;Password=123;TrustServerCertificate=True;"
+  },
+  "ApiSetting": {
+    "JwtOptions": {
+      "Issuer": "MANGOWORK-AUTH-API",
+      "Audience": "mango-client-api",
+      "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET"
+    },
+    "TopicAndQueueNames": {
+      "RegisterUserQueue": "registeruser"
+    }
   }
 }
