Add token work  in coupon api

--- a/Mango.Services.CouponApi/appsettings.json
+++ b/Mango.Services.CouponApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-SSCVMDU\\MSSQLSERVER_2;Database=MangoDB;User Id=sa;Password=123;TrustServerCertificate=True;"
+  },
+  "ApiSetting": {
+      "Issuer": "MANGOWORK-AUTH-API",
+      "Audience": "mango-client-api",
+      "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET"
+    }
   }
-}
