--- a/MangoWork/Mango.Services.PRoductAPI/Properties/launchSettings.json
+++ b/MangoWork/Mango.Services.PRoductAPI/Properties/launchSettings.json
@@ -4,7 +4,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
+      "launchUrl": "swagger", // Changed to open Swagger
       "applicationUrl": "http://localhost:5206",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -13,8 +14,9 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:7185;http://localhost:5206",
+      "launchBrowser": true,
+      "launchUrl": "swagger", // Changed to open Swagger
+      "applicationUrl": "https://localhost:7000;http://localhost:5206",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
