add  project implment

--- a/MangoWork/Mango.Services.PRoductAPI/appsettings.json
+++ b/MangoWork/Mango.Services.PRoductAPI/appsettings.json
@@ -9,10 +9,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-SSCVMDU\\MSSQLSERVER_2;Database=Mango_Order;User Id=sa;Password=123;TrustServerCertificate=True;"
   },
-  "ApiSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
-    "Issuer": "mango-auth-api",
-    "Audience": "mango-client"
+  "ApiSetting": {
+    "Issuer": "MANGOWORK-AUTH-API",
+    "Audience": "mango-client-api",
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET"
   },
   "ServiceUrls": {
     "ProductAPI": "https://localhost:7000"
