--- a/MangoWork/Mango.Services.PRoductAPI/Mango.Services.PRoductAPI.csproj
+++ b/MangoWork/Mango.Services.PRoductAPI/Mango.Services.PRoductAPI.csproj
@@ -18,4 +18,12 @@
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\ProductImages\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Mango.Services.CouponApi\Mango.Services.CouponApi.csproj" />
+  </ItemGroup>
+
 </Project>
